refactor: simplify slash-command code (shared guild guard + isDm, drop getCommandNames, dedup lookups)